@@ -11,14 +11,34 @@
 
 extern RemoteDebug Debug;
 
+class Register {
+    public:
+        Register(int req);
+
+
+        bool updateRegister(const char update[]);
+        bool isValid();
+        char* getField(int field);
+
+    private:
+        int requiredFields;
+        char reg[256];
+        char* element[64];
+        bool valid=false;
+
+
+};
+
 class SpaNetController {
     private:
-        float amps;
+
+        float amps; 
         int volts;
-        
         float hpump_amb_temperature;
 
         bool lightsOn;
+
+        Register registers[13]={1,33,30,31,29,31,34,15,15,15,17,33,18};
 
         ulong _nextUpdate=millis();
         ulong lastCommand = millis();
@@ -44,8 +64,8 @@ class SpaNetController {
         float getAmps();
         int getVolts();
         float getHpumpAmbTemp();
+
         bool isLightsOn();
-        
         bool setLightsOn(bool flag);
         
         SpaNetController();
